--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
     "css-flatten": "^2.0.1",
+    "minify-css-string": "^1.0.0",
     "postcss-prefix-selector": "^2.1.1",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.22"
