--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "files": [],
+  "compilerOptions": {
+    // ... other options
+    "allowJs": true
+  },
+
   "references": [
     {
       "path": "./tsconfig.node.json"
