--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "minify-css-string": "^1.0.0",
     "postcss-prefix-selector": "^2.1.1",
     "tailwindcss": "^4.1.17",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
